# socket

./: LICENSE  README.md  meson.build
src/: client.c  server.c  util.h
